--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
           </p>
           <p class="comp">Conception de bases de données et développement des composants d'accès aux données. Développement de la partie back-end d'une application et mise en place des composants dans une application de gestion de contenu ou e-commerce</p>
           <p class="comp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo et condimentum neque commodo</p>
-          <p class="comp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo et condimentum neque commodo</p>
-          <p class="comp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo et condimentum neque commodo</p>
+          <p class="comp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo et condimentum</p>
+          <p class="comp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo et condimentum neque commodo, et condimentum neque commodo et condimentum</p>
         </div>
       </section>
   
@@ -178,7 +178,7 @@
                 <div class="timeline-year">09.21</div>
                 <h3 class="title">Projet indépendant - portfolio</h3>
                 <p class="description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque
                 </p>
               </a>
             </div>         
@@ -217,9 +217,10 @@
             </a>
             <h1>Lila Badi</h1>
             <h2>Dev web</h2>
+            <h3>artisanduvirtuel@gmail.com</h3>
           </header>
           <div class="profile-bio">
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et adipisci, mollitia dolorem architecto hic distinctio voluptate similique ipsa iure quo exercitationem corporis culpa qui. Dolorem consequatur dolorum eos corrupti asperiores. </p>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et adipisci, mollitia dolorem architecto hic distinctio voluptate similique ipsa iure quo exercitationem corporis culpa qui. Dolorem consequatur dolorum eos corrupti. </p>
           </div>
           <ul class="profile-social-links">
             <li class="li">
