--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <li role="presentation">
             <a href="#section5">
               <span class="nav__counter">05</span>
-              <h3 class="nav__title">About me</h3>
+              <h3 class="nav__title">Contact</h3>
               <p class="nav__body">Sed sit amet justo sed odio tempus tempus. Vestibulum sed varius mi.</p>
             </a>
           </li>
