--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
             <div class="panel panel4">
                 <p><a href="https://www.voyant-gratuit.com/">Voyant Gratuit</a></p>
             </div>
-            <div class="panel panel5">
+            <!-- <div class="panel panel5">
                 <p><a href="https://https://at-fermeture.com/">AT Fermeture</a></p>
-            </div>
+            </div> -->
           </div>
       </section>
   
