--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
             <h1 class="animation">Lila Badi</h1>
             <div class="overlay">
-              <h2>Développeuse web</h2>
+              <h2>Concepteuse-Développeuse</h2>
             </div>
           </div> 
       </section>
@@ -125,13 +125,15 @@
         </div>
 
         <div class="comp-box">
-          <p class="comp">Maquettage et développement d'une interface utilisateur web statique et adaptable.
-            <p class="comp">Réalisation d'une interface utilisateur avec une solution de gestion de contenu ou e-commerce.</p>
-          </p>
-          <p class="comp">Conception de bases de données et développement des composants d'accès aux données.</p>
-          <p class="comp">Développement de la partie back-end d'une application et mise en place des composants dans une application de gestion de contenu ou e-commerce</p>
-          <p class="comp">Elaboration et mise en œuvre des composants dans une application de gestion de contenu ou e-commerce.</p>
-          <p class="comp">Utilisation des techniques SEO et d'optimisation du réferencement visant à augmenter la vibilité d'un site web.</p>
+          <p class="comp">Maquettage et développement d'une application.</p>
+          <p class="comp">Réalisation d'une interface utilisateur de type desktop.</p>
+          <p class="comp">Développer la partie front-end d’une interface utilisateur web et la partie back-end d’une interface utilisateur web.</p>
+          <p class="comp">Conception et mise en place de bases de données et développement des composants d'accès aux données dans le langage d’une base de données.</p>
+          <p class="comp">Participation à la gestion d’un projet informatique et à l’organisation de l’environnement de développement.</p>
+          <p class="comp">Conception d'une application et construction d'une  une application organisée en couches.</p>
+          <p class="comp">Développer des composants métier.</p>
+          <p class="comp">Développer une application mobile.</p>
+          <p class="comp">Préparer et exécuter les plans de tests d’une application ainsi que le déploiement d’une application.</p>
         </div>
       </section>
   
