--- a/index.html
+++ b/index.html
@@ -216,14 +216,14 @@
       <section class="section section5" id="section5">
         <aside class="profile-card">
           <header class="header">
-              <img src="img/profile.jpeg" class=".img">
+              <img src="img/profile.jpg" class=".img">
             </a>
             <h1>Lila Badi</h1>
             <h2>Dev web</h2>
             <h3>artisanduvirtuel@gmail.com</h3>
           </header>
           <div class="profile-bio">
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et adipisci, mollitia dolorem architecto hic distinctio voluptate similique ipsa iure quo exercitationem corporis culpa qui. Dolorem consequatur dolorum eos corrupti. </p>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et adipisci, mollitia dolorem architecto hic distinctio voluptate similique ipsa iure quo exercitationem corporis culpa qui. </p>
           </div>
           <ul class="profile-social-links">
             <li class="li">
