--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="timeline-year">10.21</div>
                 <h3 class="title">Formation développeur web</h3>
                 <p class="description">
-                  Formation à l'AFPA de Nice au cours de laquelle sera fait l'étude du HTML, CSS, Javascript, PHP, SQL, ainsi que l'utilisation d'AJAX et une introduction à SASS, la programation orientée objet et la conception de bases de données.
+                  Formation au cours de laquelle sera fait l'étude du HTML, CSS, Javascript, PHP, SQL, ainsi que l'utilisation d'AJAX et une introduction à SASS, la programation orientée objet et la conception de bases de données.
                 </p>
               </a>
             </div>
