--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
             <h1 class="animation">Lila Badi</h1>
             <div class="overlay">
-              <h2>Concepteuse-Développeuse</h2>
+              <h2>Conceptrice-Développeuse</h2>
             </div>
           </div> 
       </section>
