--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="timeline-year">04.22</div>
                 <h3 class="title">Stage en agence SEO</h3>
                 <p class="description">
-                  Maquettage et développement de sites vitrines en HTML, CSS et Javascript, avec Bootstrap, jQuery et PhpMailer. Sécurisation des formulaires via reCaptcha et implémentation de tarteaucitron pour la gestion des cookies. Optimisation technique et sémantique de réferencement (sitemap, robot.txt, Netlinking, ...)
+                  Développement de sites vitrines en HTML, CSS et Javascript, avec Bootstrap, jQuery et PhpMailer. Sécurisation des formulaires via reCaptcha et implémentation de tarteaucitron pour la gestion des cookies. Optimisation technique et sémantique de réferencement.
                 </p>
               </a>
             </div>
@@ -172,7 +172,7 @@
                 <div class="timeline-year">10.21</div>
                 <h3 class="title">Formation développeur web</h3>
                 <p class="description">
-                  Formation au cours de laquelle sera fait l'étude du HTML, CSS, Javascript, PHP, SQL, ainsi que l'utilisation d'AJAX et une introduction à SASS, la programation orientée objet et la conception de bases de données.
+                  Formation au cours de laquelle sera fait l'étude du HTML, CSS, Javascript, PHP, SQL, ainsi que l'utilisation d'AJAX et une introduction à la programation orientée objet.
                 </p>
               </a>
             </div>
