--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
             <h1 class="animation">Lila Badi</h1>
             <div class="overlay">
-              <h2>Conceptrice-Développeuse</h2>
+              <h2>Conceptrice Développeuse d'Application</h2>
             </div>
           </div> 
       </section>
@@ -127,13 +127,13 @@
         <div class="comp-box">
           <p class="comp">Maquettage et développement d'une application.</p>
           <p class="comp">Réalisation d'une interface utilisateur de type desktop.</p>
-          <p class="comp">Développer la partie front-end d’une interface utilisateur web et la partie back-end d’une interface utilisateur web.</p>
+          <p class="comp">Développement de la partie front-end d’une interface utilisateur web et de la partie back-end d’une interface utilisateur web.</p>
           <p class="comp">Conception et mise en place de bases de données et développement des composants d'accès aux données dans le langage d’une base de données.</p>
           <p class="comp">Participation à la gestion d’un projet informatique et à l’organisation de l’environnement de développement.</p>
-          <p class="comp">Conception d'une application et construction d'une  une application organisée en couches.</p>
-          <p class="comp">Développer des composants métier.</p>
-          <p class="comp">Développer une application mobile.</p>
-          <p class="comp">Préparer et exécuter les plans de tests d’une application ainsi que le déploiement d’une application.</p>
+          <p class="comp">Conception d'une application et construction d'une application organisée en couches.</p>
+          <p class="comp">Développement des composants métier.</p>
+          <p class="comp">Développemebt d'une application mobile.</p>
+          <p class="comp">Préparation et exécution des plans de tests d’une application ainsi que du déploiement d’une application.</p>
         </div>
       </section>
   
@@ -143,6 +143,15 @@
             <div class="timeline">
               <a href="#" class="timeline-content">
                 <div class="timeline-year">10.22</div>
+                <h3 class="title">Formation concepteur développeur d'application</h3>
+                <p class="description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                </p>
+              </a>
+            </div>     
+            <div class="timeline">
+              <a href="#" class="timeline-content">
+                <div class="timeline-year">09.22</div>
                 <h3 class="title">Projet indépendant - poker en ligne</h3>
                 <p class="description">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
@@ -175,16 +184,7 @@
                   Formation au cours de laquelle sera fait l'étude du HTML, CSS, Javascript, PHP, SQL, ainsi que l'utilisation d'AJAX et une introduction à la programation orientée objet.
                 </p>
               </a>
-            </div>
-            <div class="timeline">
-              <a href="#" class="timeline-content">
-                <div class="timeline-year">09.21</div>
-                <h3 class="title">Projet indépendant - portfolio</h3>
-                <p class="description">
-                  Réalisation sur commande d'un site vitrine pour un artiste-peintre en HTML, CSS et Javascript. Traitement des images et des vidéos.
-                </p>
-              </a>
-            </div>         
+            </div>    
           </div>
         </div>
       </section>
@@ -228,24 +228,16 @@
           <ul class="profile-social-links">
             <li class="li">
               <a href="https://plus.google.com/u/0/108645304562399086290/">
-                <img src="http://i1105.photobucket.com/albums/h348/amanzz/icons/googleplus_zpslwfbe0y7.png">
-              </a>
+                <i class="fa-brands fa-github"></i></a>
             </li>
             <li class="li">
               <a href="https://twitter.com/tutsplus">
-                <img src="http://i1105.photobucket.com/albums/h348/amanzz/icons/twitter_zps5l4gqgun.png">
-              </a>
+                <i class="fa-brands fa-linkedin"></i></a>
             </li>
             <li class="li">
               <a href="https://envato.com">
-                <img src="http://i1105.photobucket.com/albums/h348/amanzz/icons/Envato_zpsiznbb5qt.png">
-              </a>
-            </li>
-            <li class="li">
-              <a href="https://codepen.io/VoidBoy/">
-                <img src="http://i1105.photobucket.com/albums/h348/amanzz/icons/codepen_zpslubo4q3n.png">
-              </a>
-            </li>
+                <i class="fa-brands fa-google-plus"></i></a>            
+              </li>
           </ul>
         </aside>
       </section>
