--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <p><a href="https://alliance-aluminium.fr/">Alliance Alu</a></p>
             </div>
             <div class="panel panel3">
-                <p><a href=#>Pokédex</a></p>
+                <p><a href="https://pokedevweb.000webhostapp.com/">Pokédex</a></p>
             </div>
             <div class="panel panel4">
                 <p><a href="https://www.voyant-gratuit.com/">Voyant Gratuit</a></p>
