--- a/index.html
+++ b/index.html
@@ -192,16 +192,16 @@
       <section class="section section4" id="section4">
         <div class="panels">
             <div class="panel panel1">
-                <p><a href="https://seven-matloc.fr/">SEVEN</a></p> 
+                <p><a href="https://seven-matloc.fr/" target="_blank">SEVEN</a></p> 
             </div>
             <div class="panel panel2">
-                <p><a href="https://alliance-aluminium.fr/">Alliance Alu</a></p>
+                <p><a href="https://alliance-aluminium.fr/" target="_blank">Alliance Alu</a></p>
             </div>
             <div class="panel panel3">
-                <p><a href="https://pokedevweb.000webhostapp.com/">Pokédex</a></p>
+                <p><a href="https://pokedevweb.000webhostapp.com/" target="_blank">Pokédex</a></p>
             </div>
             <div class="panel panel4">
-                <p><a href="https://www.voyant-gratuit.com/">Voyant Gratuit</a></p>
+                <p><a href="https://www.voyant-gratuit.com/" target="_blank">Voyant Gratuit</a></p>
             </div>
             <!-- <div class="panel panel5">
                 <p><a href="https://https://at-fermeture.com/">AT Fermeture</a></p>
@@ -227,15 +227,15 @@
           </div>
           <ul class="profile-social-links">
             <li class="li">
-              <a href="https://plus.google.com/u/0/108645304562399086290/">
+              <a href="https://github.com/AvaKissara" target="_blank">
                 <i class="fa-brands fa-github"></i></a>
             </li>
             <li class="li">
-              <a href="https://twitter.com/tutsplus">
+              <a href="https://www.linkedin.com/in/lila-badi-8755b484/" target="_blank">
                 <i class="fa-brands fa-linkedin"></i></a>
             </li>
             <li class="li">
-              <a href="https://envato.com">
+              <a href="https://envato.com" target="_blank">
                 <i class="fa-brands fa-google-plus"></i></a>            
               </li>
           </ul>
