--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <i class="fa-brands fa-github"></i></a>
             </li>
             <li class="li">
-              <a href="https://www.linkedin.com/in/lila-badi-8755b484/" target="_blank">
+              <a href="https://www.linkedin.com/in/lila-badi/" target="_blank">
                 <i class="fa-brands fa-linkedin"></i></a>
             </li>
             <li class="li">
