--- a/index.html
+++ b/index.html
@@ -108,22 +108,28 @@
               </li>
               <li>
                 <a href="#">
-                  <iconify-icon icon="cib:mysql"></iconify-icon>
+                  
+                  <iconify-icon icon="file-icons:c"></iconify-icon> 
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <!-- <i class="fa-solid fa-database"></i> -->
+                  <iconify-icon icon="carbon:sql"></iconify-icon>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="fa-brands fa-symfony"></i>
+                  <iconify-icon icon="fa-brands:symfony"></iconify-icon>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <iconify-icon icon="file-icons:c"></iconify-icon>              
+                  <iconify-icon icon="icon-park-outline:seo"></iconify-icon>          
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <iconify-icon icon="simple-icons:springsecurity"></iconify-icon>        
                 </a>
               </li>
             </ul>
@@ -137,7 +143,7 @@
           <p class="comp">Participation à la gestion d’un projet informatique et à l’organisation de l’environnement de développement.</p>
           <p class="comp">Conception d'une application et construction d'une application organisée en couches.</p>
           <p class="comp">Développement des composants métier.</p>
-          <p class="comp">Développemebt d'une application mobile.</p>
+          <p class="comp">Développement d'une application mobile.</p>
           <p class="comp">Préparation et exécution des plans de tests d’une application ainsi que du déploiement d’une application.</p>
         </div>
       </section>
@@ -148,9 +154,9 @@
             <div class="timeline">
               <a href="#" class="timeline-content">
                 <div class="timeline-year">11.22</div>
-                <h3 class="title">Formation concepteur développeur d'application</h3>
+                <h3 class="title">Formation Concepteur CDA</h3>
                 <p class="description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                  Etude de l'analyse et la conception UML et de la méthode Merise. Les bases de données seront abordées sur SQL Server via SQL Management Studio. Le C# sera étudié avec son framework .NET. Les architectures se feront sur Razor, Winforms et WPF. Dans le cadre de la gestion de projets, seront vus la rédaction du cahier des charges, des comptes rendus d'entretiens, l'architecture, les méthodes Agiles et les outils de versionning, travaux en collaboration.
                 </p>
               </a>
             </div>     
@@ -168,7 +174,7 @@
                 <div class="timeline-year">07.22</div>
                 <h3 class="title">Titre de développeur</h3>
                 <p class="description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                  Présentation d'un oral devant un jury. Pour la partie front-end responsive et dynamique l'UX et le référencement seront également abordés. Pour la partie back-end, la sécurisation, la base de donnée et la routage de URL seront mis en place, articulés autour d'une architecture MVC.
                 </p>
               </a>
             </div>
