--- a/index.html
+++ b/index.html
@@ -108,15 +108,19 @@
               </li>
               <li>
                 <a href="#">
-                  
+                  <iconify-icon icon="carbon:sql"></iconify-icon>
+                </a>
+              </li>
+              <li>
+                <a href="#">                 
                   <iconify-icon icon="file-icons:c"></iconify-icon> 
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <iconify-icon icon="carbon:sql"></iconify-icon>
+                  <iconify-icon icon="mdi:dot-net"></iconify-icon>       
                 </a>
-              </li>
+              </li>        
               <li>
                 <a href="#">
                   <iconify-icon icon="fa-brands:symfony"></iconify-icon>
