--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
                 <i class="fa-brands fa-linkedin"></i></a>
             </li>
             <li class="li">
-              <a href="https://envato.com" target="_blank">
-                <i class="fa-brands fa-google-plus"></i></a>            
+              <a href="img/cv_canvas.pdf" target="_blank">
+                <iconify-icon icon="academicons:cv" class="card-icon"></iconify-icon></a>            
               </li>
           </ul>
         </aside>
