--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="timeline-year">10.22</div>
                 <h3 class="title">Projet indépendant - poker en ligne</h3>
                 <p class="description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                  Analyse et élaboration d'un cahier des charges et d'une maquette graphique dans la cadre de la création d'un site de poker communautaire.
                 </p>
               </a>
             </div>
@@ -234,7 +234,7 @@
               <img src="img/profile.jpg" class=".img">
             </a>
             <h1>Lila Badi</h1>
-            <h2>Dev web</h2>
+            <h2>CDA</h2>
             <h3>artisanduvirtuel@gmail.com</h3>
           </header>
           <div class="profile-bio">
