--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="timeline-year">10.22</div>
                 <h3 class="title">Projet indépendant - poker en ligne</h3>
                 <p class="description">
-                  Analyse et élaboration d'un cahier des charges et d'une maquette graphique dans la cadre de la création d'un site de poker communautaire.
+                  Analyse et élaboration d'un cahier des charges et d'une maquette graphique dans la cadre d'une commande. Le projet ayant pour objet la création d'un site de poker communautaire.
                 </p>
               </a>
             </div>
