--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="timeline-year">11.22</div>
                 <h3 class="title">Formation Concepteur CDA</h3>
                 <p class="description">
-                  Etude de l'analyse et la conception UML et de la méthode Merise. Les bases de données seront abordées sur SQL Server via SQL Management Studio. Le C# sera étudié avec son framework .NET. Les architectures se feront sur Razor, Winforms et WPF. Dans le cadre de la gestion de projets, seront vus la rédaction du cahier des charges, des comptes rendus d'entretiens, l'architecture, les méthodes Agiles et les outils de versionning, travaux en collaboration.
+                  Etude de l'analyse et la conception UML et de la méthode Merise. Les bases de données seront abordées sur SQL Server via SQL Management Studio. Le C# sera étudié avec son framework .NET. Les architectures se feront sur Razor, Winforms et WPF. Dans le cadre de la gestion de projets, seront vus la rédaction du cahier des charges, des comptes rendus d'entretiens et les méthodes Agiles.
                 </p>
               </a>
             </div>     
