--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <i class="fa-brands fa-linkedin"></i></a>
             </li>
             <li class="li">
-              <a href="img/cv_canvas.pdf" target="_blank">
+              <a href="img/Mon_CV_CDA.pdf" target="_blank">
                 <iconify-icon icon="academicons:cv" class="card-icon"></iconify-icon></a>            
               </li>
           </ul>
