--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <section class="section section5" id="section5">
         <aside class="profile-card">
           <header class="header">
-              <img src="img/profile.jpg" class=".img">
+              <img src="img/profile.png" class="img">
             </a>
             <h1>Lila Badi</h1>
             <h2>CDA</h2>
