finalisation de la carte de visite

--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
               <img src="img/profile.png" class="img">
             </a>
             <h1>Lila Badi</h1>
-            <h2>CDA</h2>
-            <h3>artisanduvirtuel@gmail.com</h3>
+            <h2>Conceptrice développeuse d'application</h2>
+            <h3><i class="fa-sharp fa-solid fa-envelope"></i> artisanduvirtuel@gmail.com</h3>
           </header>
           <div class="profile-bio">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et adipisci, mollitia dolorem architecto hic distinctio voluptate similique ipsa iure quo exercitationem corporis culpa qui.</p>
+            <p>Mon esprit créatif doublé de mes connaissances techniques fait de moi une conceptrice efficiente, rigoureuse en phase de développement. En outre, mon sens du relationnel et de la communication sont des atouts notables pour la gestion du travail en équipe et la relation client.</p>
           </div>
           <ul class="profile-social-links">
             <li class="li">
