--- a/index.html
+++ b/index.html
@@ -76,10 +76,12 @@
   
       <section class="section section1" id="section1">
         <div class="container">
-            <h1 class="animation">Lila Badi</h1>
-            <div class="overlay">
-              <h2>Conceptrice Développeuse d'Application</h2>
-            </div>
+          <div class="box">
+              <h1 class="animation">Lila Badi</h1>
+              <div class="overlay">
+                <h2>Conceptrice Développeuse d'Application</h2>
+              </div>
+            </div> 
           </div> 
       </section>
   
